Add index.html file

--- a/characterPicker.html
+++ b/characterPicker.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to Build your own cake! :3</h1>
-        <p style="font-size: 20px;">Thats right, we're making a sanrio themed cake! Go ahead and pick who you wanna turn into a cake hehe.</p>
+        <h1>Happy birthday sir <3</h1> 
+        <h2 style="color:#FF69B4;">Today you'll be making your very own custom birthday cake! :3</h2>
+        <p style="font-size: 20px;">Ofc it HAS to be sanrio themed, now go ahead and pick who you wanna turn into a cake hehe.</p>
           
         <div id="cake-builder">
             <div id="shape-options">
@@ -32,9 +33,9 @@
             </div>
             <div id="next-btn-container">
 
-                <button class="button next-btn" onclick="nextStep()">Next
+               <!--<button class="button next-btn" onclick="nextStep()">Next
                     <img width="30" height="30" src="https://img.icons8.com/pulsar-color/48/right-squared.png" alt="right-squared"/>
-                </button>
+                </button>--> 
                 <!-- <button class="button next-btn" onclick="previousStep()">Previous</button> -->
             </div>
         </div>
