--- a/flavourPicker.html
+++ b/flavourPicker.html
@@ -38,9 +38,9 @@
                 Previous
             </button>
             <div style="width: 50px;"></div>
-            <button class="button next-btn" onclick="nextStep()">Next
+           <!-- <button class="button next-btn" onclick="nextStep()">Next
                 <img width="30" height="30" src="https://img.icons8.com/pulsar-color/48/right-squared.png" alt="right-squared"/>
-            </button>
+            </button>-->
         </div>
     </div>
 </body>
