--- a/frostingPicker.html
+++ b/frostingPicker.html
@@ -16,15 +16,15 @@
                 <div class="cake-images">
                         <div class="image-btn-container">
                             <img src="./images/ChocolateFrosting.jpg" alt="Chocolate frosting" height="350" width="350">
-                            <button style="" id="cfrostBtn" onclick="selectFrosting('ChocolateFrosting')">Chocolate</button>
+                            <button style="" id="cfrostBtn" onclick="selectFrosting('Chocolate Frosting')">Chocolate</button>
                         </div>
                         <div class="image-btn-container">
                             <img src="./images/StrawberryFrosting.jpg" alt="StrawberryFrosting" height="350" width="350" margin-left="20px">
-                            <button style="" id="sfrostBtn"onclick="selectFrosting('StrawberryFrosting')">Strawberryyyy</button>
+                            <button style="" id="sfrostBtn"onclick="selectFrosting('Strawberry Frosting')">Strawberryyyy</button>
                         </div>
                         <div class="image-btn-container">
                             <img src="./images/mangofrosting.jpg" alt="mangofrosting" height="350" width="350" margin-left="20px">
-                            <button id="mfrostBtn" onclick="selectFrosting('MangoFrosting')">Mango yum :3</button>
+                            <button id="mfrostBtn" onclick="selectFrosting('Mango Frosting')">Mango yum :3</button>
                         </div>
                 <!-- More buttons for other shapes -->
                 </div>
@@ -37,9 +37,9 @@
                 Previous
             </button>
             <div style="width: 50px;"></div>
-            <button class="button next-btn" onclick="nextStep()">Next
+            <!--<button class="button next-btn" onclick="nextStep()">Next
                 <img width="30" height="30" src="https://img.icons8.com/pulsar-color/48/right-squared.png" alt="right-squared"/>
-            </button>
+            </button>-->
         </div>
     </div>
 </body>
