--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 </head>
 <body>
     <div class="sidebar">
-        <h2>Sanrio Cake Builder</h2>
+        <h2>See what step you're on! :3</h2>
         <div class="step active" id="step1">
-            <img src="./images/character_icon.png" alt="Character Icon" class="step-icon">
-            <span>1. Choose Character</span>
+            <img src="./images/character_icon..png" alt="Character Icon" class="step-icon">
+            <span>1. Choose your character :3</span>
         </div>
         <div class="step" id="step2">
-            <img src="flavor_icon.png" alt="Flavor Icon" class="step-icon">
-            <span>2. Choose Flavor</span>
+            <img src="./images/flavour_icon.png" alt="Flavor Icon" class="step-icon">
+            <span>2. Now choose a flavor</span>
         </div>
         <div class="step" id="step3">
-            <img src="frosting_icon.png" alt="Frosting Icon" class="step-icon">
-            <span>3. Pick Frosting</span>
+            <img src="./images/frosting_icon.png" alt="Frosting Icon" class="step-icon">
+            <span>3. Now add some frosting!</span>
         </div>
         <div class="step" id="step4">
-            <img src="celebration_icon.png" alt="Celebration Icon" class="step-icon">
-            <span>4. Celebrate!</span>
+            <img src="./images/celebrate_icon.png" alt="Celebration Icon" class="step-icon">
+            <span>4.AAAAAAND CELEBRATE!!</span>
         </div>
     </div>
 
     <div class="content" id="main-content">
-        <h1>Welcome to Build your own cake! :3</h1>
-        <p style="font-size: 20px;">Thats right, we're making a sanrio themed cake! Go ahead and pick who you wanna turn into a cake hehe.</p>
+        <h1>Happy birthday sir <3</h1> 
+        <h2 style="color:#FF69B4;">Today you'll be making your very own custom birthday cake! :3</h2>
+        <p style="font-size: 20px;">Ofc it HAS to be sanrio themed, now go ahead and pick who you wanna turn into a cake hehe.</p>
           
         <div id="cake-builder">
             <div id="shape-options">
@@ -50,11 +51,11 @@
                 </div>
             <!-- More buttons for other shapes -->
             </div>
-            <div id="next-btn-container">
+            <!--<div id="next-btn-container">
 
-                <button class="button next-btn" onclick="nextStep()">Next
+               <button class="button next-btn" onclick="nextStep()">Next
                     <img width="30" height="30" src="https://img.icons8.com/pulsar-color/48/right-squared.png" alt="right-squared"/>
-                </button> 
+                </button> -->
                 <!-- <button class="button next-btn" onclick="previousStep()">Previous</button> -->
             </div>
         </div>
