converted iamges to webp

--- a/characterPicker.html
+++ b/characterPicker.html
@@ -17,15 +17,15 @@
             <div id="shape-options">
                 <div class="cake-images">
                     <div class="image-btn-container">
-                        <img src="./images/pomcake.jpg" alt="Pompom cake" height="350" width="350">
+                        <img src="./images/pomcake.webp" alt="Pompom cake" height="350" width="350">
                         <button style="" id="pompompurinBtn" onclick="selectShape('pom-pom')">PomPom ૮₍ ´ ꒳ `₎ა</button>
                     </div>
                     <div class="image-btn-container">
-                        <img src="./images/hammyCake.jpg" alt="Melo cake" height="350" width="350" margin-left="20px">
+                        <img src="./images/hammyCake.webp" alt="Melo cake" height="350" width="350" margin-left="20px">
                         <button style="" id="hamBtn"onclick="selectShape('hammyy')">Hammy! ⪩ •⩊• ⪨</button>
                     </div>
                     <div class="image-btn-container">
-                        <img src="./images/melocake.jpg" alt="Melo cake" height="350" width="350" margin-left="20px">
+                        <img src="./images/melocake.webp" alt="Melo cake" height="350" width="350" margin-left="20px">
                         <button id="meloBtn" onclick="selectShape('melo')">My Melo ૮ ˶ᵔ ᵕ ᵔ˶ ა </button>
                     </div>
                 <!-- More buttons for other shapes -->
