--- a/flavourPicker.html
+++ b/flavourPicker.html
@@ -16,15 +16,15 @@
             <div id="shape-options">
                 <div class="cake-images">
                         <div class="image-btn-container">
-                            <img src="./images/chococake.jpg" alt="chococake cake" height="350" width="350">
+                            <img src="./images/chococake.webp" alt="chococake cake" height="350" width="350">
                             <button style="" id="chococakeBtn" onclick="selectFlavour('chocolate')">Chocolate :3</button>
                         </div>
                         <div class="image-btn-container">
-                            <img src="./images/strawberrycake.jpg" alt="strawberry cake" height="350" width="350" margin-left="20px">
+                            <img src="./images/strawberrycake.webp" alt="strawberry cake" height="350" width="350" margin-left="20px">
                             <button style="" id="strawBtn"onclick="selectFlavour('strawberry')">Strawberryyy :3</button>
                         </div>
                         <div class="image-btn-container">
-                            <img src="./images/redvevet.jpg" alt="Red Velvet cake" height="350" width="350" margin-left="20px">
+                            <img src="./images/redvevet.webp" alt="Red Velvet cake" height="350" width="350" margin-left="20px">
                             <button id="rvBtn" onclick="selectFlavour('redvelvet')">Red velvettt :3 </button>
                         </div>
                 <!-- More buttons for other shapes -->
