--- a/frostingPicker.html
+++ b/frostingPicker.html
@@ -15,15 +15,15 @@
             <div id="shape-options">
                 <div class="cake-images">
                         <div class="image-btn-container">
-                            <img src="./images/ChocolateFrosting.jpg" alt="Chocolate frosting" height="350" width="350">
+                            <img src="./images/ChocolateFrosting.webp" alt="Chocolate frosting" height="350" width="350">
                             <button style="" id="cfrostBtn" onclick="selectFrosting('Chocolate Frosting')">Chocolate</button>
                         </div>
                         <div class="image-btn-container">
-                            <img src="./images/StrawberryFrosting.jpg" alt="StrawberryFrosting" height="350" width="350" margin-left="20px">
+                            <img src="./images/StrawberryFrosting.webp" alt="StrawberryFrosting" height="350" width="350" margin-left="20px">
                             <button style="" id="sfrostBtn"onclick="selectFrosting('Strawberry Frosting')">Strawberryyyy</button>
                         </div>
                         <div class="image-btn-container">
-                            <img src="./images/mangofrosting.jpg" alt="mangofrosting" height="350" width="350" margin-left="20px">
+                            <img src="./images/mangofrosting.webp" alt="mangofrosting" height="350" width="350" margin-left="20px">
                             <button id="mfrostBtn" onclick="selectFrosting('Mango Frosting')">Mango yum :3</button>
                         </div>
                 <!-- More buttons for other shapes -->
