--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div class="sidebar">
         <h2>See what step you're on! :3</h2>
         <div class="step active" id="step1">
-            <img src="./images/character_icon..png" alt="Character Icon" class="step-icon">
+            <img src="./images/character_icon.webp" alt="Character Icon" class="step-icon">
             <span>1. Choose your character :3</span>
         </div>
         <div class="step" id="step2">
-            <img src="./images/flavour_icon.png" alt="Flavor Icon" class="step-icon">
+            <img src="./images/flavour_icon.webp" alt="Flavor Icon" class="step-icon">
             <span>2. Now choose a flavor</span>
         </div>
         <div class="step" id="step3">
-            <img src="./images/frosting_icon.png" alt="Frosting Icon" class="step-icon">
+            <img src="./images/frosting_icon.webp" alt="Frosting Icon" class="step-icon">
             <span>3. Now add some frosting!</span>
         </div>
         <div class="step" id="step4">
-            <img src="./images/celebrate_icon.png" alt="Celebration Icon" class="step-icon">
+            <img src="./images/celebrate_icon.webp" alt="Celebration Icon" class="step-icon">
             <span>4.AAAAAAND CELEBRATE!!</span>
         </div>
     </div>
@@ -37,15 +37,15 @@
             <div id="shape-options">
                 <div class="cake-images">
                     <div class="image-btn-container">
-                        <img src="./images/pomcake.jpg" alt="Pompom cake" height="350" width="350">
+                        <img src="./images/pomcake.webp" alt="Pompom cake" height="350" width="350">
                         <button style="" id="pompompurinBtn" onclick="selectShape('pom-pom')">PomPom ૮₍ ´ ꒳ `₎ა</button>
                     </div>
                     <div class="image-btn-container">
-                        <img src="./images/hammyCake.jpg" alt="Melo cake" height="350" width="350" margin-left="20px">
+                        <img src="./images/hammyCake.webp" alt="Melo cake" height="350" width="350" margin-left="20px">
                         <button style="" id="hamBtn"onclick="selectShape('hammyy')">Hammy! ⪩ •⩊• ⪨</button>
                     </div>
                     <div class="image-btn-container">
-                        <img src="./images/melocake.jpg" alt="Melo cake" height="350" width="350" margin-left="20px">
+                        <img src="./images/melocake.webp" alt="Melo cake" height="350" width="350" margin-left="20px">
                         <button id="meloBtn" onclick="selectShape('melo')">My Melo ૮ ˶ᵔ ᵕ ᵔ˶ ა </button>
                     </div>
                 </div>
